Update Prompts & Fix Transactional